[project]
name = "payment-decision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dishka>=1.10.0",
    "fastapi>=0.136.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "rust-just>=1.50.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
]



[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--cov=src --cov-report=html -v -s -vv --verbose --color=yes"

[dependency-groups]
dev = [
    "faker>=40.15.0",
    "mypy>=1.20.1",
    "ruff>=0.15.11",
]
